# git2ignore

./: .coverage  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: git2ignore-action.yml
git2ignore/: __init__.py  __main__.py  git2ignore.py
tests/: test_cli.py  test_template.py
